finished application.html.erb

--- a/Goals_app/app/views/layouts/application.html.erb
+++ b/Goals_app/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <h2>Welcome <%= current_user.username %></h2>
+        <form action='<%= session_url %>' method="post">
+          <input
+          type="hidden"
+          name="_method"
+          value="delete"
+          >
+          <input type="submit" value="Log Out">
+          </form>
+          <% else %>
+          <a href="<%=new_user_url %>">signup</a>
+          <a href="<%=new_session_url %>">login</a>
+    <% end %>
     <%= yield %>
   </body>
 </html>
